--- a/.github/workflows/check_podcast.yml
+++ b/.github/workflows/check_podcast.yml
@@ -4,8 +4,6 @@ on:
   schedule:
     - cron: '*/15 * * * *'  # Kiểm tra mỗi 15 phút
   workflow_dispatch:  # Cho phép chạy thủ công từ GitHub UI
-  repository_dispatch:  # Nhận tín hiệu từ Telegram bot
-    types: [publish_podcast]
 
 jobs:
   check-podcast:
@@ -17,7 +15,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo apt-get install curl jq chromium-chromedriver
+          sudo apt-get update
+          sudo apt-get install -y curl jq chromium-chromedriver
           pip install playwright
           playwright install chromium
 
@@ -27,36 +26,19 @@ jobs:
           TELEGRAM_TOKEN="${{ secrets.TELEGRAM_TOKEN }}"
           CHAT_ID="${{ secrets.CHAT_ID }}"
 
-          RESPONSE=$(curl --write-out "%{http_code}" --silent --output /dev/null $PODCAST_URL)
+          echo "🔍 Checking Podcast Status..."
+          HTTP_STATUS=$(curl -o /dev/null -s -w "%{http_code}\n" $PODCAST_URL)
 
-          if [ "$RESPONSE" -eq 200 ]; then
-            echo "✅ Podcast hoạt động bình thường."
+          if [ "$HTTP_STATUS" -eq 200 ]; then
+            echo "✅ Podcast đang hoạt động bình thường!"
           else
-            echo "❌ Podcast cần được publish lại."
-            # Gửi thông báo Telegram
+            echo "❌ Podcast không hoạt động, cần publish lại!"
             curl -X POST "https://api.telegram.org/bot$TELEGRAM_TOKEN/sendMessage" \
               -d chat_id=$CHAT_ID \
-              -d text="Podcast bị lỗi: Cần được publish lại."
+              -d text="⚠ Podcast bị lỗi: cần publish lại!"
 
             # Kích hoạt workflow publish_podcast.yml
             curl -X POST -H "Accept: application/vnd.github.v3+json" \
               -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
               https://api.github.com/repos/${{ github.repository }}/actions/workflows/publish_podcast.yml/dispatches \
               -d '{"ref":"main"}'
-
-  auto-publish:
-    runs-on: ubuntu-latest
-    needs: check-podcast
-    if: github.event_name == 'repository_dispatch' && github.event.action == 'publish_podcast'
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Install dependencies
-        run: |
-          pip install playwright
-          playwright install chromium
-
-      - name: Auto-Publish Podcast
-        run: python publish_podcast.py
