--- a/.github/workflows/check_podcast.yml
+++ b/.github/workflows/check_podcast.yml
@@ -2,7 +2,7 @@ name: Check Podcast Status
 
 on:
   schedule:
-    # Lịch chạy mỗi 15 phút
+    # Lịch chạy mỗi giờ
     - cron: '*/15 * * * *'
   workflow_dispatch:  # Cho phép chạy thủ công từ GitHub UI
 
@@ -16,13 +16,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          # Cài đặt curl và jq (nếu chưa có)
-          sudo apt-get update
-          sudo apt-get install -y curl jq python3 python3-pip
-
-          # Cài đặt playwright và cấu hình
-          pip3 install playwright
-          python3 -m playwright install  # Cài đặt các browser cần thiết cho playwright
+          sudo apt-get install curl jq
 
       - name: Check Podcast Status
         run: |
@@ -33,8 +27,6 @@ jobs:
           # Kiểm tra trạng thái podcast
           RESPONSE=$(curl --write-out "%{http_code}" --silent --output /dev/null $PODCAST_URL)
 
-          echo "Mã trạng thái của podcast: $RESPONSE"
-
           if [ "$RESPONSE" -eq 200 ]; then
             echo "Podcast hoạt động bình thường."
           else
@@ -43,8 +35,4 @@ jobs:
             curl -X POST "https://api.telegram.org/bot$TELEGRAM_TOKEN/sendMessage" \
               -d chat_id=$CHAT_ID \
               -d text="Podcast bị lỗi: Cần được publish lại."
-
-            # Kích hoạt script publish_podcast.py để publish lại podcast
-            echo "Chạy script publish_podcast.py để publish lại podcast"
-            python3 publish_podcast.py  # Kích hoạt script Python để publish lại podcast
           fi
