--- a/.github/workflows/check_podcast.yml
+++ b/.github/workflows/check_podcast.yml
@@ -3,7 +3,7 @@ name: Check Podcast Status
 on:
   schedule:
     # Lịch chạy mỗi giờ
-    - cron: '*/15 * * * *'
+    - cron: '0 * * * *'
   workflow_dispatch:  # Cho phép chạy thủ công từ GitHub UI
 
 jobs:
